# govuk-chat-evaluation-prototype

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: action-lint.yaml  ci.yaml  ci.yml
config/: README.md
config/defaults/: jailbreak_guardrails.yaml  output_guardrails.yaml  question_router.yaml  rag_answers.yaml  retrieval.yaml
data/: README.md
govuk_chat_evaluation/: cli.py  config.py  dataset_generation.py  file_system.py  logging.py  output.py  timing.py
govuk_chat_evaluation/answer_generation/: __main__.py  cli.py  models.py
govuk_chat_evaluation/jailbreak_guardrails/: cli.py  evaluate.py  generate.py  models.py
govuk_chat_evaluation/output_guardrails/: cli.py  evaluate.py  generate.py
govuk_chat_evaluation/question_router/: cli.py  evaluate.py  generate.py
govuk_chat_evaluation/rag_answers/: cli.py  data_models.py  deepeval_evaluate.py  evaluate.py  generate.py  temp_example.py
govuk_chat_evaluation/rag_answers/custom_deepeval/metrics/factual_correctness/: __init__.py  factual_correctness.py  schema.py  template.py
govuk_chat_evaluation/retrieval/: cli.py  evaluate.py  generate.py
results/: README.md
src/govuk_chat_evaluation/: jailbreak_guardrails.py
tests/: conftest.py  test_config.py  test_dataset_generation.py  test_file_system.py  test_jailbreak_guardrails.py  test_logging.py
tests/jailbreak_guardrails/: conftest.py  test_cli.py  test_evaluate.py  test_generate.py
tests/output_guardrails/: conftest.py  test_cli.py  test_evaluate.py  test_generate.py
tests/question_router/: conftest.py  test_cli.py  test_evaluate.py  test_generate.py
tests/rag_answers/: conftest.py  test_cli.py  test_data_models.py  test_deepeval_evaluate.py  test_evaluate.py  test_generate.py
tests/rag_answers/custom_deepeval/metrics/: test_factual_correctness.py  test_factual_correctness_with_real_openai.py
tests/rag_answers/test_deepeval_custom_metrics/: test_factual_correctness.py
tests/retrieval/: conftest.py  test_cli.py  test_evaluate.py  test_generate.py
