[project]
name = "govuk-chat-evaluation-prototype"
version = "0.1.0"
description = "Evaluation tool for GOV.UK Chat"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "pydantic>=2.10.6",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "pyright>=1.1.396",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.0",
]

[project.scripts]
govuk_chat_evaluation = "govuk_chat_evaluation.cli:main"

# Pyright LSP pick up uv venv directory
[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.setuptools]
packages = ["govuk_chat_evaluation"]
