[project]
name = "govuk-chat-evaluation-prototype"
version = "0.1.0"
description = "Evaluation tool for GOV.UK Chat"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "deepeval>=2.6.6",
    "matplotlib>=3.10",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.396",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pytest-freezer>=0.4.9",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.0",
    "typeguard>=4.4.2",
]


[tool.uv]
package = true

[project.scripts]
govuk_chat_evaluation = "govuk_chat_evaluation.cli:main"

# Pyright LSP pick up uv venv directory
[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.setuptools]
packages = ["govuk_chat_evaluation"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
markers = [
  "real_openai: run the tests that test against a real OpenAI API"
]
addopts = "-m 'not real_openai'"